// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Tests components Footer 1`] = `
<h6
  className="MuiTypography-root makeStyles-root-1 MuiTypography-subtitle1"
>
  © 
  2024
   
  <a
    aria-describedby={null}
    className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
    href="https://github.com/thatziv"
    onBlur={[Function]}
    onFocus={[Function]}
    onMouseLeave={[Function]}
    onMouseOver={[Function]}
    onTouchEnd={[Function]}
    onTouchStart={[Function]}
    target="_blank"
    title="https://github.com/thatziv"
  >
    Zavaar Shah
  </a>
</h6>
`;

exports[`Tests components Gallery 1`] = `
Array [
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-1mum6ye-MuiGrid-root{box-sizing:border-box;margin:0;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;width:100%;}",
      }
    }
    data-emotion="css 1mum6ye-MuiGrid-root"
  />,
  <div
    className="MuiGrid-root MuiGrid-item css-1mum6ye-MuiGrid-root"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-i9gxme{-webkit-box-flex:1;-webkit-flex-grow:1;-ms-flex-positive:1;flex-grow:1;}",
        }
      }
      data-emotion="css i9gxme"
    />
    <div
      className="makeStyles-root-7 Media MuiBox-root css-i9gxme"
    >
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": ".css-17y0qnc-MuiPaper-root{background-color:#fff;color:rgba(0, 0, 0, 0.87);-webkit-transition:box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;transition:box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;box-shadow:none;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;height:50px;max-height:100%;max-width:100%;padding-left:16px;background-color:#121212;}",
          }
        }
        data-emotion="css 17y0qnc-MuiPaper-root"
      />
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 makeStyles-root-7 css-17y0qnc-MuiPaper-root"
      >
        <style
          dangerouslySetInnerHTML={
            Object {
              "__html": ".css-ahj2mt-MuiTypography-root{margin:0;font-family:\\"Roboto\\",\\"Helvetica\\",\\"Arial\\",sans-serif;font-weight:400;font-size:1rem;line-height:1.5;letter-spacing:0.00938em;}",
            }
          }
          data-emotion="css ahj2mt-MuiTypography-root"
        />
        <p
          className="MuiTypography-root MuiTypography-body1 css-ahj2mt-MuiTypography-root"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": ".css-12u91cq-MuiLink-root{-webkit-text-decoration:underline;text-decoration:underline;text-decoration-color:rgba(25, 118, 210, 0.4);}.css-12u91cq-MuiLink-root:hover{text-decoration-color:inherit;}",
              }
            }
            data-emotion="css 12u91cq-MuiLink-root"
          />
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": ".css-1ps4owl-MuiTypography-root-MuiLink-root{margin:0;color:#1976d2;-webkit-text-decoration:underline;text-decoration:underline;text-decoration-color:rgba(25, 118, 210, 0.4);}.css-1ps4owl-MuiTypography-root-MuiLink-root:hover{text-decoration-color:inherit;}",
              }
            }
            data-emotion="css 1ps4owl-MuiTypography-root-MuiLink-root"
          />
          <a
            className="MuiTypography-root MuiTypography-inherit MuiLink-root MuiLink-underlineAlways css-1ps4owl-MuiTypography-root-MuiLink-root"
            href="https://picsum.photos/200/300"
            onBlur={[Function]}
            onFocus={[Function]}
            target="_blank"
          >
            My Pic 1
          </a>
        </p>
      </div>
      <div
        className="MuiBox-root css-0"
      >
        <div
          onClick={[Function]}
        >
          <div>
            <style
              dangerouslySetInnerHTML={
                Object {
                  "__html": ".css-u0qz5q{max-height:500px;display:block;background-image:url(/bg.svg);background-repeat:repeat;object-fit:contain;overflow:hidden;width:100%;height:100%;cursor:-webkit-zoom-in;cursor:zoom-in;}",
                }
              }
              data-emotion="css u0qz5q"
            />
            <img
              alt="My Pic 1"
              className="MuiBox-root css-u0qz5q"
              src="https://picsum.photos/200/300"
            />
          </div>
        </div>
        <div
          onClick={[Function]}
        >
          <div>
            <img
              alt="My Pic 2"
              className="MuiBox-root css-u0qz5q"
              src="https://picsum.photos/200/300"
            />
          </div>
        </div>
        <div
          onClick={[Function]}
        >
          <div>
            <img
              alt="My Pic 3"
              className="MuiBox-root css-u0qz5q"
              src="https://picsum.photos/200/300"
            />
          </div>
        </div>
      </div>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": ".css-lxjhk5-MuiMobileStepper-root{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:justify;-webkit-justify-content:space-between;justify-content:space-between;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;background:#fff;padding:8px;}",
          }
        }
        data-emotion="css lxjhk5-MuiMobileStepper-root"
      />
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": ".css-rh92k-MuiPaper-root-MuiMobileStepper-root{background-color:#fff;color:rgba(0, 0, 0, 0.87);-webkit-transition:box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;transition:box-shadow 300ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;box-shadow:none;display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-box-pack:justify;-webkit-justify-content:space-between;justify-content:space-between;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;background:#fff;padding:8px;}",
          }
        }
        data-emotion="css rh92k-MuiPaper-root-MuiMobileStepper-root"
      />
      <div
        className="MuiPaper-root MuiPaper-elevation MuiPaper-elevation0 MuiMobileStepper-root MuiMobileStepper-positionStatic makeStyles-root-7 css-rh92k-MuiPaper-root-MuiMobileStepper-root"
      >
        <style
          dangerouslySetInnerHTML={
            Object {
              "__html": ".css-dq3ewt-MuiButton-root{font-family:\\"Roboto\\",\\"Helvetica\\",\\"Arial\\",sans-serif;font-weight:500;font-size:0.8125rem;line-height:1.75;letter-spacing:0.02857em;text-transform:uppercase;min-width:64px;padding:4px 5px;border-radius:4px;-webkit-transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;color:#1976d2;font-size:0.8rem;padding:6px;}.css-dq3ewt-MuiButton-root:hover{-webkit-text-decoration:none;text-decoration:none;background-color:rgba(25, 118, 210, 0.04);}@media (hover: none){.css-dq3ewt-MuiButton-root:hover{background-color:transparent;}}.css-dq3ewt-MuiButton-root.Mui-disabled{color:rgba(0, 0, 0, 0.26);}",
            }
          }
          data-emotion="css dq3ewt-MuiButton-root"
        />
        <style
          dangerouslySetInnerHTML={
            Object {
              "__html": ".css-1tw9yqw-MuiButtonBase-root-MuiButton-root{display:-webkit-inline-box;display:-webkit-inline-flex;display:-ms-inline-flexbox;display:inline-flex;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;position:relative;box-sizing:border-box;-webkit-tap-highlight-color:transparent;background-color:transparent;outline:0;border:0;margin:0;border-radius:0;padding:0;cursor:pointer;-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;vertical-align:middle;-moz-appearance:none;-webkit-appearance:none;-webkit-text-decoration:none;text-decoration:none;color:inherit;font-family:\\"Roboto\\",\\"Helvetica\\",\\"Arial\\",sans-serif;font-weight:500;font-size:0.8125rem;line-height:1.75;letter-spacing:0.02857em;text-transform:uppercase;min-width:64px;padding:4px 5px;border-radius:4px;-webkit-transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;transition:background-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,border-color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms,color 250ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;color:#1976d2;font-size:0.8rem;padding:6px;}.css-1tw9yqw-MuiButtonBase-root-MuiButton-root::-moz-focus-inner{border-style:none;}.css-1tw9yqw-MuiButtonBase-root-MuiButton-root.Mui-disabled{pointer-events:none;cursor:default;}@media print{.css-1tw9yqw-MuiButtonBase-root-MuiButton-root{-webkit-print-color-adjust:exact;color-adjust:exact;}}.css-1tw9yqw-MuiButtonBase-root-MuiButton-root:hover{-webkit-text-decoration:none;text-decoration:none;background-color:rgba(25, 118, 210, 0.04);}@media (hover: none){.css-1tw9yqw-MuiButtonBase-root-MuiButton-root:hover{background-color:transparent;}}.css-1tw9yqw-MuiButtonBase-root-MuiButton-root.Mui-disabled{color:rgba(0, 0, 0, 0.26);}",
            }
          }
          data-emotion="css 1tw9yqw-MuiButtonBase-root-MuiButton-root"
        />
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall Mui-disabled MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1tw9yqw-MuiButtonBase-root-MuiButton-root"
          disabled={true}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={-1}
          type="button"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": ".css-i4bv87-MuiSvgIcon-root{-webkit-user-select:none;-moz-user-select:none;-ms-user-select:none;user-select:none;width:1em;height:1em;display:inline-block;fill:currentColor;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;-webkit-transition:fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;transition:fill 200ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;font-size:1.5rem;}",
              }
            }
            data-emotion="css i4bv87-MuiSvgIcon-root"
          />
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="KeyboardArrowLeftIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M15.41 16.59 10.83 12l4.58-4.59L14 6l-6 6 6 6 1.41-1.41z"
            />
          </svg>
          Back
        </button>
        <style
          dangerouslySetInnerHTML={
            Object {
              "__html": ".css-1txemsz-MuiMobileStepper-progress{width:50%;}",
            }
          }
          data-emotion="css 1txemsz-MuiMobileStepper-progress"
        />
        <style
          dangerouslySetInnerHTML={
            Object {
              "__html": ".css-1be5mm1-MuiLinearProgress-root-MuiMobileStepper-progress{position:relative;overflow:hidden;display:block;height:4px;z-index:0;background-color:rgb(167, 202, 237);width:50%;}@media print{.css-1be5mm1-MuiLinearProgress-root-MuiMobileStepper-progress{-webkit-print-color-adjust:exact;color-adjust:exact;}}",
            }
          }
          data-emotion="css 1be5mm1-MuiLinearProgress-root-MuiMobileStepper-progress"
        />
        <span
          aria-valuemax={100}
          aria-valuemin={0}
          aria-valuenow={0}
          className="MuiLinearProgress-root MuiLinearProgress-colorPrimary MuiLinearProgress-determinate MuiMobileStepper-progress css-1be5mm1-MuiLinearProgress-root-MuiMobileStepper-progress"
          role="progressbar"
        >
          <style
            dangerouslySetInnerHTML={
              Object {
                "__html": ".css-5xe99f-MuiLinearProgress-bar1{width:100%;position:absolute;left:0;bottom:0;top:0;-webkit-transition:-webkit-transform .4s linear;transition:transform .4s linear;transform-origin:left;background-color:#1976d2;}",
              }
            }
            data-emotion="css 5xe99f-MuiLinearProgress-bar1"
          />
          <span
            className="MuiLinearProgress-bar MuiLinearProgress-barColorPrimary MuiLinearProgress-bar1Determinate css-5xe99f-MuiLinearProgress-bar1"
            style={
              Object {
                "transform": "translateX(-100%)",
              }
            }
          />
        </span>
        <button
          className="MuiButtonBase-root MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall MuiButton-root MuiButton-text MuiButton-textPrimary MuiButton-sizeSmall MuiButton-textSizeSmall css-1tw9yqw-MuiButtonBase-root-MuiButton-root"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onContextMenu={[Function]}
          onDragLeave={[Function]}
          onFocus={[Function]}
          onKeyDown={[Function]}
          onKeyUp={[Function]}
          onMouseDown={[Function]}
          onMouseLeave={[Function]}
          onMouseUp={[Function]}
          onTouchEnd={[Function]}
          onTouchMove={[Function]}
          onTouchStart={[Function]}
          tabIndex={0}
          type="button"
        >
          Next
          <svg
            aria-hidden={true}
            className="MuiSvgIcon-root MuiSvgIcon-fontSizeMedium css-i4bv87-MuiSvgIcon-root"
            data-testid="KeyboardArrowRightIcon"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M8.59 16.59 13.17 12 8.59 7.41 10 6l6 6-6 6-1.41-1.41z"
            />
          </svg>
        </button>
      </div>
      <style
        dangerouslySetInnerHTML={
          Object {
            "__html": ".css-13nnq27-MuiTypography-root{margin:0;font-family:\\"Roboto\\",\\"Helvetica\\",\\"Arial\\",sans-serif;font-weight:500;font-size:0.875rem;line-height:1.57;letter-spacing:0.00714em;color:gray;text-align:center;margin-top:12px;}",
          }
        }
        data-emotion="css 13nnq27-MuiTypography-root"
      />
      <h6
        className="MuiTypography-root MuiTypography-subtitle2 css-13nnq27-MuiTypography-root"
      >
        Click image to enlarge
      </h6>
    </div>
  </div>,
]
`;

exports[`Tests components SocialMedia renders service when both icon and name are provided 1`] = `
<div>
  <div
    data-testid="social-media-redirect-dialog"
    onClick={[Function]}
  >
    <a
      aria-describedby={null}
      className="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiTypography-h4 MuiTypography-colorPrimary"
      href="https://www.facebook.com"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      target="_blank"
      title="Facebook"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "backgroundColor": "#3f51b5",
            "color": "#fdfdfd",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <i
            className="fa-solid fa-fs-brands fa-facebook"
          />
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </a>
  </div>
</div>
`;

exports[`Tests components SocialMedia renders with URL and icon 1`] = `
<div>
  <div
    data-testid="social-media-redirect-dialog"
    onClick={[Function]}
  >
    <a
      aria-describedby={null}
      className="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiTypography-h4 MuiTypography-colorPrimary"
      href="https://www.facebook.com"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      target="_blank"
      title="Facebook"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "backgroundColor": "#3f51b5",
            "color": "#fdfdfd",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <i
            className="fa-brands fa-facebook"
          />
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </a>
  </div>
</div>
`;

exports[`Tests components SocialMedia renders with URL and name 1`] = `
<div>
  <div
    data-testid="social-media-redirect-dialog"
    onClick={[Function]}
  >
    <a
      aria-describedby={null}
      className="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiTypography-h4 MuiTypography-colorPrimary"
      href="https://www.facebook.com"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      target="_blank"
      title="Facebook"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "backgroundColor": "#3f51b5",
            "color": "#fdfdfd",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <i
            className="fa-brands fa-facebook"
          />
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </a>
  </div>
</div>
`;

exports[`Tests components SocialMedia renders with URL, confirmation dialog, and icon 1`] = `
<div>
  <div
    data-testid="social-media-redirect-dialog"
    onClick={[Function]}
  >
    <a
      aria-describedby={null}
      className="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiTypography-h4 MuiTypography-colorPrimary"
      href="https://www.facebook.com"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      target="_blank"
      title="Facebook"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "backgroundColor": "#3f51b5",
            "color": "#fdfdfd",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <i
            className="fa-brands fa-facebook"
          />
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </a>
  </div>
</div>
`;

exports[`Tests components SocialMedia renders with URL, confirmation dialog, and showName 1`] = `
<div>
  <div
    data-testid="social-media-redirect-dialog"
    onClick={[Function]}
  >
    <a
      aria-describedby={null}
      className="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiTypography-h4 MuiTypography-colorPrimary"
      href="https://www.facebook.com"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      target="_blank"
      title="Facebook"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "backgroundColor": "#3f51b5",
            "color": "#fdfdfd",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <i
            className="fa-brands fa-facebook"
          />
          <div>
              
            Facebook
          </div>
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </a>
  </div>
</div>
`;

exports[`Tests components SocialMedia renders with only URL 1`] = `
<div>
  <div
    data-testid="social-media-redirect-dialog"
    onClick={[Function]}
  >
    <a
      aria-describedby={null}
      className="MuiTypography-root MuiLink-root MuiLink-underlineNone MuiTypography-h4 MuiTypography-colorPrimary"
      href="https://example.com"
      onBlur={[Function]}
      onFocus={[Function]}
      onMouseLeave={[Function]}
      onMouseOver={[Function]}
      onTouchEnd={[Function]}
      onTouchStart={[Function]}
      target="_blank"
      title="Example"
    >
      <button
        className="MuiButtonBase-root MuiButton-root MuiButton-text"
        disabled={false}
        onBlur={[Function]}
        onDragLeave={[Function]}
        onFocus={[Function]}
        onKeyDown={[Function]}
        onKeyUp={[Function]}
        onMouseDown={[Function]}
        onMouseLeave={[Function]}
        onMouseUp={[Function]}
        onTouchEnd={[Function]}
        onTouchMove={[Function]}
        onTouchStart={[Function]}
        style={
          Object {
            "backgroundColor": "#3f51b5",
            "color": "#fdfdfd",
          }
        }
        tabIndex={0}
        type="button"
      >
        <span
          className="MuiButton-label"
        >
          <i
            className="fa-brands fa-example"
          />
        </span>
        <span
          className="MuiTouchRipple-root"
        />
      </button>
    </a>
  </div>
</div>
`;

exports[`Tests components Status renders status CARD correctly 1`] = `
<div
  className="Media"
>
  <div
    className="MuiPaper-root MuiPaper-elevation4 MuiPaper-rounded"
    style={
      Object {
        "borderRadius": 5,
        "padding": 25,
      }
    }
  >
    <div
      className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
      style={
        Object {
          "textDecoration": null,
        }
      }
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-align-content-xs-flex-start"
      >
        <div
          className="MuiGrid-root MuiGrid-item"
        >
          <div
            style={
              Object {
                "color": "#43a047",
              }
            }
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.48 2 2 6.48 2 12s4.48 10 10 10 10-4.48 10-10S17.52 2 12 2zm-2 15l-5-5 1.41-1.41L10 14.17l7.59-7.59L19 8l-9 9z"
              />
            </svg>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item"
        >
           
          Online
        </div>
      </div>
    </div>
    <h6
      className="MuiTypography-root MuiTypography-subtitle1"
      style={
        Object {
          "color": "#979797",
        }
      }
    >
      This service is currently 
      online
       at
       
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        href="https://www.google.com"
        onBlur={[Function]}
        onFocus={[Function]}
        target="_blank"
      >
        www.google.com
      </a>
    </h6>
  </div>
</div>
`;

exports[`Tests components Status renders status CARD correctly when it's offline 1`] = `
<div
  className="Media"
>
  <div
    className="MuiPaper-root MuiPaper-elevation4 MuiPaper-rounded"
    style={
      Object {
        "borderRadius": 5,
        "padding": 25,
      }
    }
  >
    <div
      className="MuiTypography-root MuiTypography-h5 MuiTypography-gutterBottom"
      style={
        Object {
          "textDecoration": null,
        }
      }
    >
      <div
        className="MuiGrid-root MuiGrid-container MuiGrid-align-content-xs-flex-start"
      >
        <div
          className="MuiGrid-root MuiGrid-item"
        >
          <div
            style={
              Object {
                "color": "#e53935",
              }
            }
          >
            <svg
              aria-hidden={true}
              className="MuiSvgIcon-root"
              focusable="false"
              viewBox="0 0 24 24"
            >
              <path
                d="M12 2C6.47 2 2 6.47 2 12s4.47 10 10 10 10-4.47 10-10S17.53 2 12 2zm5 13.59L15.59 17 12 13.41 8.41 17 7 15.59 10.59 12 7 8.41 8.41 7 12 10.59 15.59 7 17 8.41 13.41 12 17 15.59z"
              />
            </svg>
          </div>
        </div>
        <div
          className="MuiGrid-root MuiGrid-item"
        >
           
          Offline
        </div>
      </div>
    </div>
    <h6
      className="MuiTypography-root MuiTypography-subtitle1"
      style={
        Object {
          "color": "#979797",
        }
      }
    >
      This service is currently 
      offline
       at
       
      <a
        className="MuiTypography-root MuiLink-root MuiLink-underlineHover MuiTypography-colorPrimary"
        href="https://www.google.com"
        onBlur={[Function]}
        onFocus={[Function]}
        target="_blank"
      >
        www.google.com
      </a>
    </h6>
  </div>
</div>
`;

exports[`Tests components Status renders status DOT correctly 1`] = `
<div
  className="Media"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-1l1qn3m .MuiBadge-badge{background-color:#4caf50;color:#4caf50;box-shadow:0 0 0 2px #424242;}.css-1l1qn3m .MuiBadge-badge::after{position:absolute;top:0;left:0;width:100%;height:100%;border-radius:50%;-webkit-animation:ripple 1.2s infinite ease-in-out;animation:ripple 1.2s infinite ease-in-out;border:1px solid currentColor;content:\\"\\";}@-webkit-keyframes ripple{0%{-webkit-transform:scale(.8);-moz-transform:scale(.8);-ms-transform:scale(.8);transform:scale(.8);opacity:1;}100%{-webkit-transform:scale(2.4);-moz-transform:scale(2.4);-ms-transform:scale(2.4);transform:scale(2.4);opacity:0;}}@keyframes ripple{0%{-webkit-transform:scale(.8);-moz-transform:scale(.8);-ms-transform:scale(.8);transform:scale(.8);opacity:1;}100%{-webkit-transform:scale(2.4);-moz-transform:scale(2.4);-ms-transform:scale(2.4);transform:scale(2.4);opacity:0;}}",
      }
    }
    data-emotion="css 1l1qn3m"
  />
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-15onyto-MuiBadge-root{position:relative;display:-webkit-inline-box;display:-webkit-inline-flex;display:-ms-inline-flexbox;display:inline-flex;vertical-align:middle;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;}.css-15onyto-MuiBadge-root .MuiBadge-badge{background-color:#4caf50;color:#4caf50;box-shadow:0 0 0 2px #424242;}.css-15onyto-MuiBadge-root .MuiBadge-badge::after{position:absolute;top:0;left:0;width:100%;height:100%;border-radius:50%;-webkit-animation:ripple 1.2s infinite ease-in-out;animation:ripple 1.2s infinite ease-in-out;border:1px solid currentColor;content:\\"\\";}@-webkit-keyframes ripple{0%{-webkit-transform:scale(.8);-moz-transform:scale(.8);-ms-transform:scale(.8);transform:scale(.8);opacity:1;}100%{-webkit-transform:scale(2.4);-moz-transform:scale(2.4);-ms-transform:scale(2.4);transform:scale(2.4);opacity:0;}}@keyframes ripple{0%{-webkit-transform:scale(.8);-moz-transform:scale(.8);-ms-transform:scale(.8);transform:scale(.8);opacity:1;}100%{-webkit-transform:scale(2.4);-moz-transform:scale(2.4);-ms-transform:scale(2.4);transform:scale(2.4);opacity:0;}}",
      }
    }
    data-emotion="css 15onyto-MuiBadge-root"
  />
  <span
    className="MuiBadge-root css-15onyto-MuiBadge-root"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-ank3r8-MuiBadge-badge{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-box-flex-wrap:wrap;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-align-content:center;-ms-flex-line-pack:center;align-content:center;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;position:absolute;box-sizing:border-box;font-family:\\"Roboto\\",\\"Helvetica\\",\\"Arial\\",sans-serif;font-weight:500;font-size:0.75rem;min-width:8px;line-height:1;padding:0;height:8px;border-radius:4px;z-index:1;-webkit-transition:-webkit-transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;transition:transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;bottom:14%;right:14%;-webkit-transform:scale(1) translate(50%, 50%);-moz-transform:scale(1) translate(50%, 50%);-ms-transform:scale(1) translate(50%, 50%);transform:scale(1) translate(50%, 50%);transform-origin:100% 100%;}.css-ank3r8-MuiBadge-badge.MuiBadge-invisible{-webkit-transform:scale(0) translate(50%, 50%);-moz-transform:scale(0) translate(50%, 50%);-ms-transform:scale(0) translate(50%, 50%);transform:scale(0) translate(50%, 50%);}",
        }
      }
      data-emotion="css ank3r8-MuiBadge-badge"
    />
    <span
      className="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-ank3r8-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`Tests components Status renders status DOT correctly when it's offline 1`] = `
<div
  className="Media"
>
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-1og3vng .MuiBadge-badge{background-color:#9e9e9e;color:#9e9e9e;box-shadow:0 0 0 2px #424242;}.css-1og3vng .MuiBadge-badge::after{position:absolute;top:0;left:0;width:100%;height:100%;border-radius:50%;-webkit-animation:ripple 0s infinite ease-in-out;animation:ripple 0s infinite ease-in-out;border:1px solid currentColor;content:\\"\\";}@-webkit-keyframes ripple{0%{-webkit-transform:scale(.8);-moz-transform:scale(.8);-ms-transform:scale(.8);transform:scale(.8);opacity:1;}100%{-webkit-transform:scale(2.4);-moz-transform:scale(2.4);-ms-transform:scale(2.4);transform:scale(2.4);opacity:0;}}@keyframes ripple{0%{-webkit-transform:scale(.8);-moz-transform:scale(.8);-ms-transform:scale(.8);transform:scale(.8);opacity:1;}100%{-webkit-transform:scale(2.4);-moz-transform:scale(2.4);-ms-transform:scale(2.4);transform:scale(2.4);opacity:0;}}",
      }
    }
    data-emotion="css 1og3vng"
  />
  <style
    dangerouslySetInnerHTML={
      Object {
        "__html": ".css-w5zoq4-MuiBadge-root{position:relative;display:-webkit-inline-box;display:-webkit-inline-flex;display:-ms-inline-flexbox;display:inline-flex;vertical-align:middle;-webkit-flex-shrink:0;-ms-flex-negative:0;flex-shrink:0;}.css-w5zoq4-MuiBadge-root .MuiBadge-badge{background-color:#9e9e9e;color:#9e9e9e;box-shadow:0 0 0 2px #424242;}.css-w5zoq4-MuiBadge-root .MuiBadge-badge::after{position:absolute;top:0;left:0;width:100%;height:100%;border-radius:50%;-webkit-animation:ripple 0s infinite ease-in-out;animation:ripple 0s infinite ease-in-out;border:1px solid currentColor;content:\\"\\";}@-webkit-keyframes ripple{0%{-webkit-transform:scale(.8);-moz-transform:scale(.8);-ms-transform:scale(.8);transform:scale(.8);opacity:1;}100%{-webkit-transform:scale(2.4);-moz-transform:scale(2.4);-ms-transform:scale(2.4);transform:scale(2.4);opacity:0;}}@keyframes ripple{0%{-webkit-transform:scale(.8);-moz-transform:scale(.8);-ms-transform:scale(.8);transform:scale(.8);opacity:1;}100%{-webkit-transform:scale(2.4);-moz-transform:scale(2.4);-ms-transform:scale(2.4);transform:scale(2.4);opacity:0;}}",
      }
    }
    data-emotion="css w5zoq4-MuiBadge-root"
  />
  <span
    className="MuiBadge-root css-w5zoq4-MuiBadge-root"
  >
    <style
      dangerouslySetInnerHTML={
        Object {
          "__html": ".css-ank3r8-MuiBadge-badge{display:-webkit-box;display:-webkit-flex;display:-ms-flexbox;display:flex;-webkit-flex-direction:row;-ms-flex-direction:row;flex-direction:row;-webkit-box-flex-wrap:wrap;-webkit-flex-wrap:wrap;-ms-flex-wrap:wrap;flex-wrap:wrap;-webkit-box-pack:center;-ms-flex-pack:center;-webkit-justify-content:center;justify-content:center;-webkit-align-content:center;-ms-flex-line-pack:center;align-content:center;-webkit-align-items:center;-webkit-box-align:center;-ms-flex-align:center;align-items:center;position:absolute;box-sizing:border-box;font-family:\\"Roboto\\",\\"Helvetica\\",\\"Arial\\",sans-serif;font-weight:500;font-size:0.75rem;min-width:8px;line-height:1;padding:0;height:8px;border-radius:4px;z-index:1;-webkit-transition:-webkit-transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;transition:transform 225ms cubic-bezier(0.4, 0, 0.2, 1) 0ms;bottom:14%;right:14%;-webkit-transform:scale(1) translate(50%, 50%);-moz-transform:scale(1) translate(50%, 50%);-ms-transform:scale(1) translate(50%, 50%);transform:scale(1) translate(50%, 50%);transform-origin:100% 100%;}.css-ank3r8-MuiBadge-badge.MuiBadge-invisible{-webkit-transform:scale(0) translate(50%, 50%);-moz-transform:scale(0) translate(50%, 50%);-ms-transform:scale(0) translate(50%, 50%);transform:scale(0) translate(50%, 50%);}",
        }
      }
      data-emotion="css ank3r8-MuiBadge-badge"
    />
    <span
      className="MuiBadge-badge MuiBadge-dot MuiBadge-anchorOriginBottomRight MuiBadge-anchorOriginBottomRightCircular MuiBadge-overlapCircular css-ank3r8-MuiBadge-badge"
    />
  </span>
</div>
`;

exports[`Tests components Tags 1`] = `
<div
  className="makeStyles-root-2"
>
  <div
    className="MuiChip-root MuiChip-colorPrimary"
    onKeyDown={[Function]}
    onKeyUp={[Function]}
    tag="Test-Driven_Development"
  >
    <span
      aria-hidden={true}
      className="material-icons MuiIcon-root MuiChip-icon material-icons-outlined MuiChip-iconColorPrimary"
    >
      tag
    </span>
    <span
      className="MuiChip-label"
    >
      Test-Driven Development
    </span>
  </div>
</div>
`;

exports[`Tests components Timeline renders correctly 1`] = `null`;

exports[`Tests components YouTubeEmbed 1`] = `
<div
  className="video-responsive"
>
  <iframe
    allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
    allowFullScreen={true}
    frameBorder="0"
    height="270"
    src="https://www.youtube-nocookie.com/embed/dQw4w9WgXcQ"
    title="dQw4w9WgXcQ"
    width="480"
  />
</div>
`;
